# Bubble-Radius-Fitting

./: .gitattributes  .gitignore  Bubble_Rt_curve_fitting_v1.4.mlappinstall  CLAUDE.md  GUI_source_code.mlapp  GUI_source_code_1_19.m  GUI_source_code_1_19.mlapp  LICENSE  README.md  build.spec  build_app.bat  build_app.sh  build_onefile.spec  pyproject.toml  runGenerateVideoForFittedRtCurves.m  setup.bat  setup.sh
bubbletrack/: build.spec  build_onefile.spec  pyproject.toml
bubbletrack/src/bubbletrack/: __init__.py  __main__.py  app.py  cli.py  event_bus.py
bubbletrack/src/bubbletrack/controller/: auto_controller.py  autotune_worker.py  controller.py  display_mixin.py  export_controller.py  file_controller.py  manual_controller.py  pretune_controller.py  worker.py
bubbletrack/src/bubbletrack/model/: cache.py  circle_fit.py  config.py  constants.py  conventions.py  detection.py  export.py  image_io.py  presets.py  removing_factor.py  session.py  state.py
bubbletrack/src/bubbletrack/resources/: style.qss
bubbletrack/src/bubbletrack/ui/: automatic_tab.py  batch_config_dialog.py  frame_scrubber.py  header_bar.py  image_compare.py  image_panel.py  image_source.py  left_panel.py  main_window.py  manual_tab.py  post_processing.py  pretune_tab.py  radius_chart.py  shortcuts.py  status_bar.py  tab_bar.py  widgets.py  (+1 more)
bubbletrack/tests/: test_circle_fit.py  test_config.py  test_constants.py  test_conventions.py  test_detection.py  test_export.py  test_image_compare.py  test_image_io.py  test_presets.py  test_removing_factor.py  test_report.py  test_state.py  test_undo.py
(+216 files in other folders)
